# local-notes

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
.github/workflows/: build-tauri.yml  deploy-pwa.yml
.pnpm-store/v10/index/00/: e22049009ea62258c0fdc04671b1fb95674eed870587736c63f8e5e2f0d6fa-glob-parent@5.1.2.json
.pnpm-store/v10/index/02/: 27d3ed011b5bd36b8b8b40c11e4cfeece906ea9f65ffb3c1a10cfd09331238-quansync@0.2.11.json  (+2 more)
.trae/specs/create-local-notes-diary-app/: checklist.md  spec.md  tasks.md
scripts/: gen-icons.mjs
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AppIcon.vue  BottomTabBar.vue  SideNav.vue  ThemeSwitcher.vue  ThemeToggle.vue  navItems.ts
src/components/common/: Calendar.vue  DatePickerButton.vue
src/components/diary/: Calendar.vue  DiaryEditor.vue  DiaryList.vue
src/components/note/: NoteCard.vue  NoteEditor.vue  SearchBar.vue
src/components/settings/: AboutInfo.vue  DataManagement.vue  StorageInfo.vue  ThemeSettings.vue
src/components/task/: DatePicker.vue  TaskCheckbox.vue  TaskInput.vue  TaskItem.vue
src/router/: index.ts
src/stores/: app.ts  diary.ts  note.ts  task.ts
src/types/: index.ts
src/utils/: backup.ts  db.ts  indexedDbStorage.ts  sqliteStorage.ts  storage.ts  time.ts
src/views/: DiaryView.vue  NotesView.vue  SettingsView.vue  TasksView.vue  TodayView.vue
(+461 files in other folders)
